--- a/index.html
+++ b/index.html
@@ -103,51 +103,9 @@
 			<div class="row">
 				<div class="col bordered">
 					<!-- <p class="title">Biography</p> -->
-					Acclaimed by the leading Polish musical magazine Ruch Muzyczny as “always excellent in contemporary
-					piano repertoire”, Julia Samojło has performed as a soloist and with many prominent artists across
-					Europe and Israel in venues like The Concertgebouw, The Barbican Hall, The Wigmore Hall, The
-					Rudolfinum, The Tel Aviv Museum of Art, The Warsaw Philharmonic, Witold Lutoslawski Concert Studio
-					of The Polish Radio. She has appeared in concerts with The Sinfonia Varsovia, The Polish Radio
-					Symphony Orchestra, The Poznań Philharmonics and was invited by The Polish Radio 2 to record Stefan
-					Kisielewski’s Piano Concerto with The Polish National Radio Symphony Orchestra of Katowice. Her
-					performance of Wojciech Kilar’s Piano Concerto during The International Music Festival Radio Autumn
-					in Prague, was described by Hudebni Rozhledy as “handed brilliantly”. She has appeared in concerts
-					at The International Festival of Contemporary Music Warsaw Autumn, Pre- LSO recital in The Barbican
-					Hall, Kunst10Daagse in Bergen, Holland, From Chopin to Górecki- Sources and Inspirations Festival in
-					Warsaw, World Percussion Congress in Jelenia Góra, Young Songmakers Almanac directed by Graham
-					Johnson in London and others. Julia’s repertoire ranges from Bach to 21st century world
-					premieres.  Her passionate performances  have been acknowledged by many distinguished composers of
-					all generations and critics. She has enjoyed many years of collaboration with The Polish Composers
-					Union- more than 30 of her live performances including numerous premieres have been recorded for
-					their library and aired on The Polish Radio 2. The world premiere of Benedykt Konowalski’s VIII
-					Symphony concertante for piano, percussion and string orchestra at The Warsaw Musical Meetings
-					Festival  was released by Musica Sacra. In 2013 Julia will record an album featuring 12 Etudes,
-					Piano Quintet and Piano Trio by Krzysztof Baculewski to be released by DUX. As a natural
-					collaborator, she has deeply enjoyed working with with violinist Krzysztof Jakowicz, cellists
-					Karolina Jaroszewska and Tomasz Strahl, percussionist Leszek Lorent , clarinetist Artur Pachlewski,
-					saxophonist Pawel Gusnar, singers Anna Mikołajczyk- Niewiedział, Anna Radziejewska, Szymon Komasa, 
-					conductors Jacek Kaspszyk, Łukasz Borowicz, Marek Moś, Krzesimir Dębski.  Her deep interest in
-					chamber music is also expressed in her doctorate thesis that examines collaboration in percussion-
-					piano duo focusing on works by Kazimierz Serocki, Maurice Ohana and Harrison
-					Birtwistle. Julia has received numerous prizes and artistic scholarships including:  I prize
-					at the International Competition for Young Performers in Athens, 1st prize at the competiton for the
-					leading performance of a specially commissioned work by an Israeli composer in the framework of Tel
-					Hai International Piano Master Classes, the scholarships of The Prime Minister of Poland, The
-					President of The City of Szczecin, The President of The City of Bydgoszcz, The Minister of Culture
-					and National Heritage, grants from Adam Mickiewicz Institute. She is a graduate of The Feliks
-					Nowowiejski Academy of Music in Bydgoszcz where she studied with Tatiana Shebanova. She finished
-					artistic internship in contemporary performance with Szabolcs Esztenyi and postgraduate and doctoral
-					studies with Maja Nosowska at The Fryderyk Chopin University of Music in Warsaw. In 2010 she
-					received a doctoral Erasmus scholarship to study at the Guildhall School of Music and Drama where
-					she worked with Pamela Lidiard and received coachings from Graham Johnson. Julia participated in
-					numerous master classes in New York, London, Bergen, Israel, Oxford, where she worked with such
-					distinguished artists as Halina Czerny-Stefańska, Emanuel Krasovsky, Lee Kum-Sing, Jerome Rose,
-					Alexander Kobrin, Alon Goldstein, John Perry,  Nelly Ben- Or, Graham Johnson, Julius Drake, Roger
-					Vignoles, Martin Katz. Since September 2011 Julia has held a position of an Artist Fellow at
-					The Guildhall School of Music and Drama in London under the artistic supervision of Ronan O’Hora
-					where she has also taught piano and worked closely with the vocal and composition departments.  In
-					the academic year of 2011- 2012 she was also a piano teacher at The City University in London.
-
+					<p>Julia SAMOJŁO graduated from the Feliks Nowowiejski Academy of Music in Bydgoszcz in the class of Prof. Tatiana Shebanova. Following her studies, she completed an artistic internship under the supervision of Prof. Szábolcs Esztényi and post-graduate and doctoral studies under the artistic supervision of Prof. Maja Nosowska at the Fryderyk Chopin University of Music in Warsaw. She honed her skills under the direction of Ronan O’Hora, Graham Johnson, and Pamela Lidiard at the Guildhall School of Music and Drama in London as part of the Erasmus scholarship and a two-year Guildhall Artist Fellowship. She has participated in master classes conducted by such artists as Halina Czerny-Stefańska, Emanuel Krasovsky, Lee KumSing, Alexander Kobrin, Victor Derevianko, Alon Goldstein, Jerome Rose, Roger Vignoles, Julius Drake, and Martin Katz. She was a piano teacher at the City University in London (2011-2012) and at the Guildhall School of Music and Drama (2011-2014). In 2007-2010 and 2016-2018 she was a chamber music pianist at the Fryderyk Chopin University of Music in Warsaw.</p>
+					<p>A special place in the repertoire of Julia Samojło is occupied by piano chamber music and contemporary music. The pianist has made numerous premieres and many recordings for DUX, Musica Sacra, the Library-Music Library of the Polish Composers’ Union, and Polish Radio. In 2020 she premiered 24 Variations on a theme of a folk song by Roman Ryterband. In 2019 she recorded all songs by Zygmunt Stojowski with Magdalena Molendowska- soprano. In 2017, she made the world premiere of the Concerto for piano and orchestra, written for her by Edward Nesbit, with the New Music Orchestra conducted by Szymon Bywalec. In 2014-2017, she recorded compositions for solo piano and chamber ones by Krzysztof Baculewski for the record label DUX. In 2014, the CD of outstanding saxophonist Paweł Gusnar Saxophone Varie which includes, among others, Invitation by Maria Pokrzywińska recorded by Paweł and Julia, received the award of the phonographic industry Fryderyk in the category Album of the year – chamber music. In 2010, she recorded the Piano Concerto by Stefan Kisielewski with the Polish National Radio Symphony Orchestra conducted by Jacek Kaspszyk.</p>
+					<p>In November 2015, Julia Samojło made her debut at the Carnegie Hall in New York with cellist Karolina Jaroszewska, with whom she has been creating a duo since 2008. She has also performed, among others, at Koninklijk Concertgebouw in Amsterdam, Barbican Hall, Wigmore Hall, Purcell Room, St John’s Smith Square in London, Rudolfinum in Prague, Tel Aviv Museum of Art, and National Philharmonic in Warsaw. She has given concerts with, among others, the Sinfonia Varsovia, Polish National Radio Symphony Orchestra, Polish Radio Orchestra, New Music Orchestra, Poznań Philharmonic Orchestra, under the direction of Łukasz Borowicz, Krzesimir Dębski, Jacek Kaspszyk, Alexander Liebreich, Szymon Bywalec, and Marek Moś. She has often performed at the Warsaw Music Encounters festival, concert cycles Musical Seasons of the Year, and Composers’ Portraits organised by the Polish Composers’ Union. She has also participated in such festivals as: Warsaw Autumn, From Chopin to Górecki – sources and inspirations, Radio Autumn in Prague, Oxford Lieder Festival, City of London Festival, and at the final concert of the Young Songmakers’ Almanac directed by Graham Johnson in London. Julia Samojło has been a laureate of numerous prizes and scholarships, including: 1st prize at the International Competition of Young Performers in Athens, Scholarship of the Prime Minister of Poland, Scholarship of the President of the City of Szczecin, Scholarship of the President of the City of Bydgoszcz, Scholarship of the Minister of Culture and National Heritage. She is a chairman of the Warsaw branch of the Polish Chamber Musicians’ Association.</p>
 				</div>
 			</div>
 		</div>
