Added multimedia page

--- a/calendar.html
+++ b/calendar.html
@@ -31,16 +31,14 @@
 				<ul id="reviews" style="width: auto; position: relative;">
 					<li
 						style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
-						<div>"I’m
-							partial to musicians like Ms. Jaroszewska and Ms. Samojło. They have
+						<div>"I’m partial to musicians like Ms. Jaroszewska and Ms. Samojło. They have
 							done their homework, but in the concert, they plunge in and take risks,
 							and we are better for it".</div>
 						<div class="reviewer">David La Marche, New York Concert Review</div>
 					</li>
 					<li
 						style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 50; display: none;">
-						<div>"Ms.
-							Samojło (....) made an even greater impression in many moments of
+						<div>"Ms. Samojło (....) made an even greater impression in many moments of
 							austere beauty, her tone exquisite at the close “Like Blossom
 							Dew-Freshen’d To Gladness” and the floating, Debussian quality she
 							brought to “The Little Island”.</div>
@@ -48,8 +46,7 @@
 					</li>
 					<li
 						style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
-						<div>"Ms.
-							Samojło tossed off the difficult opening passagework with playful ease
+						<div>"Ms. Samojło tossed off the difficult opening passagework with playful ease
 							and lightness of execution. Indeed, her playing throughout the polonaise
 							was indicative of an understanding of the composer which is rarely seen
 							these days". </div>
@@ -67,8 +64,7 @@
 					</li>
 					<li
 						style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
-						<div>"Pianist
-							Julia Samojło presented a dashing interpretation of this daunting and
+						<div>"Pianist Julia Samojło presented a dashing interpretation of this daunting and
 							complex work that was recently recast by the composer from a solo piano
 							composition to an imposing work for piano and orchestra."
 
@@ -83,8 +79,7 @@
 					</li>
 					<li
 						style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
-						<div>"The
-							solo part was excellently performed by Julia Samojlo, doctorate student
+						<div>"The solo part was excellently performed by Julia Samojlo, doctorate student
 							of Fryderyk Chopin University of Music in Warsaw. She greatly sensed
 							all nuances of this music."</div>
 						<div class="reviewer">Daniel Wierzejski, "Polska Muza"</div>
