--- a/multimedia.html
+++ b/multimedia.html
@@ -2,118 +2,143 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8" />
-	
-	<title>Julia Samojło - pianist</title>
-	<link rel="stylesheet" id="jquery.bxslider-style-css" href="styles/jquery.css" type="text/css" media="screen">
-	<link rel="stylesheet" href="styles/layout.css" type="text/css" media="screen" />
-	<link rel="stylesheet" href="styles/menu.css" type="text/css" media="screen" />
-	<link rel="stylesheet" href="styles/style.css" type="text/css" media="screen" />
-	<link rel="stylesheet" href="styles/jquery.bxSlider.min.css" type="text/css" media="screen" />
-	<script type="text/javascript" src="scripts/jquery.js"></script>
-	<script type="text/javascript" src="scripts/jquery.bxSlider.min.js"></script>
-	<script type="text/javascript" src="scripts/main.js"></script>
+    <meta charset="utf-8" />
+
+    <title>Julia Samojło - pianist</title>
+    <link rel="stylesheet" id="jquery.bxslider-style-css" href="styles/jquery.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="styles/layout.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="styles/menu.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="styles/style.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="styles/jquery.bxSlider.min.css" type="text/css" media="screen" />
+    <script type="text/javascript" src="scripts/jquery.js"></script>
+    <script type="text/javascript" src="scripts/jquery.bxSlider.min.js"></script>
+    <script type="text/javascript" src="scripts/main.js"></script>
 </head>
 
 <body>
-	<div id="wrapper">
-		<div class="language-menu">
-			<!-- <a href="http://www.juliasamojlo.com/en" class="en"></a>
+    <div id="wrapper">
+        <div class="language-menu">
+            <!-- <a href="http://www.juliasamojlo.com/en" class="en"></a>
 			<a href="http://www.juliasamojlo.com/pl" class="pl"></a> -->
-		</div>
-		<div id="header">
-			<a href="http://www.juliasamojlo.com/en/">
-				<img id="main-image" width="330" height="400" alt="Julia Samojło, pianist" src="images/julia.jpg" />
-			</a>
-			<div id="header-text">
-				<img id="page-title" width="512" height="172" alt="Julia Samojło, pianist" src="images/htitle.png" />
+        </div>
+        <div id="header">
+            <a href="http://www.juliasamojlo.com/en/">
+                <img id="main-image" width="330" height="400" alt="Julia Samojło, pianist" src="images/julia.jpg" />
+            </a>
+            <div id="header-text">
+                <img id="page-title" width="512" height="172" alt="Julia Samojło, pianist" src="images/htitle.png" />
 
-				<ul id="reviews" style="width: auto; position: relative;">
-					<li
-						style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
-						<div>"I’m
-							partial to musicians like Ms. Jaroszewska and Ms. Samojło. They have
-							done their homework, but in the concert, they plunge in and take risks,
-							and we are better for it".</div>
-						<div class="reviewer">David La Marche, New York Concert Review</div>
-					</li>
-					<li
-						style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 50; display: none;">
-						<div>"Ms.
-							Samojło (....) made an even greater impression in many moments of
-							austere beauty, her tone exquisite at the close “Like Blossom
-							Dew-Freshen’d To Gladness” and the floating, Debussian quality she
-							brought to “The Little Island”.</div>
-						<div class="reviewer">David La Marche, New York Concert Review</div>
-					</li>
-					<li
-						style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
-						<div>"Ms.
-							Samojło tossed off the difficult opening passagework with playful ease
-							and lightness of execution. Indeed, her playing throughout the polonaise
-							was indicative of an understanding of the composer which is rarely seen
-							these days". </div>
-						<div class="reviewer">David La Marche, New York Concert Review</div>
-					</li>
-					<li
-						style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
-						<div>Samojlo caresses the piano keys, bringing out the nuances in the music.</div>
-						<div class="reviewer">flaneur.me.uk</div>
-					</li>
-					<li
-						style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
-						<div>"....always excellent in contemporary piano repertoire"</div>
-						<div class="reviewer">Małgorzata Komorowska, Ruch Muzyczny</div>
-					</li>
-					<li
-						style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
-						<div>"Pianist
-							Julia Samojło presented a dashing interpretation of this daunting and
-							complex work that was recently recast by the composer from a solo piano
-							composition to an imposing work for piano and orchestra."
+                <ul id="reviews" style="width: auto; position: relative;">
+                    <li
+                        style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
+                        <div>"I’m
+                            partial to musicians like Ms. Jaroszewska and Ms. Samojło. They have
+                            done their homework, but in the concert, they plunge in and take risks,
+                            and we are better for it".</div>
+                        <div class="reviewer">David La Marche, New York Concert Review</div>
+                    </li>
+                    <li
+                        style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 50; display: none;">
+                        <div>"Ms.
+                            Samojło (....) made an even greater impression in many moments of
+                            austere beauty, her tone exquisite at the close “Like Blossom
+                            Dew-Freshen’d To Gladness” and the floating, Debussian quality she
+                            brought to “The Little Island”.</div>
+                        <div class="reviewer">David La Marche, New York Concert Review</div>
+                    </li>
+                    <li
+                        style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
+                        <div>"Ms.
+                            Samojło tossed off the difficult opening passagework with playful ease
+                            and lightness of execution. Indeed, her playing throughout the polonaise
+                            was indicative of an understanding of the composer which is rarely seen
+                            these days". </div>
+                        <div class="reviewer">David La Marche, New York Concert Review</div>
+                    </li>
+                    <li
+                        style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
+                        <div>Samojlo caresses the piano keys, bringing out the nuances in the music.</div>
+                        <div class="reviewer">flaneur.me.uk</div>
+                    </li>
+                    <li
+                        style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
+                        <div>"....always excellent in contemporary piano repertoire"</div>
+                        <div class="reviewer">Małgorzata Komorowska, Ruch Muzyczny</div>
+                    </li>
+                    <li
+                        style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
+                        <div>"Pianist
+                            Julia Samojło presented a dashing interpretation of this daunting and
+                            complex work that was recently recast by the composer from a solo piano
+                            composition to an imposing work for piano and orchestra."
 
-						</div>
-						<div class="reviewer">Marek Żebrowski, Polish Music Center Newsletter</div>
-					</li>
-					<li
-						style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
-						<div>"Young pianist performed it brilliantly and you can see that she is a specialist in
-							contemporary music."</div>
-						<div class="reviewer">Vladimir Riha, "Hudebni Rozhledy"</div>
-					</li>
-					<li
-						style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
-						<div>"The
-							solo part was excellently performed by Julia Samojlo, doctorate student
-							of Fryderyk Chopin University of Music in Warsaw. She greatly sensed
-							all nuances of this music."</div>
-						<div class="reviewer">Daniel Wierzejski, "Polska Muza"</div>
-					</li>
-				</ul>
-			</div>
-		</div>
+                        </div>
+                        <div class="reviewer">Marek Żebrowski, Polish Music Center Newsletter</div>
+                    </li>
+                    <li
+                        style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
+                        <div>"Young pianist performed it brilliantly and you can see that she is a specialist in
+                            contemporary music."</div>
+                        <div class="reviewer">Vladimir Riha, "Hudebni Rozhledy"</div>
+                    </li>
+                    <li
+                        style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
+                        <div>"The solo part was excellently performed by Julia Samojlo, doctorate student
+                            of Fryderyk Chopin University of Music in Warsaw. She greatly sensed
+                            all nuances of this music."</div>
+                        <div class="reviewer">Daniel Wierzejski, "Polska Muza"</div>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
-		<div class="main-menu">
-			<ul>
-				<li class="link_biography"><a href="index.html">Biography</a></li>
-				<li class="link_calendar"><a href="calendar.html">Calendar</a></li>
-				<li class="link_multimedia"><a href="multimedia.html">Multimedia</a></li>
-			</ul>
-		</div>
+        <div class="main-menu">
+            <ul>
+                <li class="link_biography"><a href="index.html">Biography</a></li>
+                <li class="link_calendar"><a href="calendar.html">Calendar</a></li>
+                <li class="link_multimedia"><a href="multimedia.html">Multimedia</a></li>
+            </ul>
+        </div>
 
-		<div id="content">
-			<div class="row">
-				<div class="col bordered">
-					<!-- <p class="title">Biography</p> -->
+        <div id="content">
+            <div class="row">
+                <div class="col bordered">
+                    <!-- <p class="title">Biography</p> -->
+                    <div class="recording">
+                        <p class="title">Women in Music Festival</p>
+                        <p class="performers">Katherine McIndoe - soprano, Magdalena Molendowska - soprano, Julia Samojło - piano</p>
+                        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/0Q-DoSlqVJY"
+                            title="Women in Music Festival" frameborder="0"
+                            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                    <div class="recording">
+                        <p class="title">Edward Grieg - "Lullaby"</p>
+                        <p class="performers">Jakub Jakowicz - violin, Julia Samojło - piano</p>
+                        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/1bSsaSSQ63o" title="Edward Grieg - Lullaby" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="recording">
+                        <p class="title">Władysław Żeleński - "Angel or devil?"</p>
+                        <p class="performers">Magdalena Molendowska - soprano, Julia Samojło - piano</p>
+                        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/PMArklmTvTU" title="Władysław Żeleński - Angel or devil?" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>  
+                    <div class="recording">
+                        <p class="title">Zygmunt Stojowski - "Let her sky shine blue"</p>
+                        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/IHU_CUXxNtk" title="Zygmunt Stojowski - Let her sky shine blue" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="recording">
+                        <p class="title">Stanisław Moniuszko - "Czaty"</p>
+                        <p class="performers">Łukasz Hajduczenia - baritone, Julia Samojło - piano</p>
+                        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/RSEHy21D0J0" title="Stanisław Moniuszko - Czaty" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>                                                               
+                </div>
+            </div>
+        </div>
 
-				</div>
-			</div>
-		</div>
-
-		<div id="footer">
-			Copyright &copy; Julia Samojło
-		</div>
-	</div>
+        <div id="footer">
+            Copyright &copy; Julia Samojło
+        </div>
+    </div>
 </body>
 
 </html>
