Added two new concerts

--- a/calendar.html
+++ b/calendar.html
@@ -29,41 +29,35 @@
 				<img id="page-title" width="512" height="172" alt="Julia Samojło, pianist" src="images/htitle.png" />
 
 				<ul id="reviews" style="width: auto; position: relative;">
-					<li
-						style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
+					<li style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
 						<div>"I’m partial to musicians like Ms. Jaroszewska and Ms. Samojło. They have
 							done their homework, but in the concert, they plunge in and take risks,
 							and we are better for it".</div>
 						<div class="reviewer">David La Marche, New York Concert Review</div>
 					</li>
-					<li
-						style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 50; display: none;">
+					<li style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 50; display: none;">
 						<div>"Ms. Samojło (....) made an even greater impression in many moments of
 							austere beauty, her tone exquisite at the close “Like Blossom
 							Dew-Freshen’d To Gladness” and the floating, Debussian quality she
 							brought to “The Little Island”.</div>
 						<div class="reviewer">David La Marche, New York Concert Review</div>
 					</li>
-					<li
-						style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
+					<li style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
 						<div>"Ms. Samojło tossed off the difficult opening passagework with playful ease
 							and lightness of execution. Indeed, her playing throughout the polonaise
 							was indicative of an understanding of the composer which is rarely seen
 							these days". </div>
 						<div class="reviewer">David La Marche, New York Concert Review</div>
 					</li>
-					<li
-						style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
+					<li style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
 						<div>Samojlo caresses the piano keys, bringing out the nuances in the music.</div>
 						<div class="reviewer">flaneur.me.uk</div>
 					</li>
-					<li
-						style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
+					<li style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
 						<div>"....always excellent in contemporary piano repertoire"</div>
 						<div class="reviewer">Małgorzata Komorowska, Ruch Muzyczny</div>
 					</li>
-					<li
-						style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
+					<li style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
 						<div>"Pianist Julia Samojło presented a dashing interpretation of this daunting and
 							complex work that was recently recast by the composer from a solo piano
 							composition to an imposing work for piano and orchestra."
@@ -71,14 +65,12 @@
 						</div>
 						<div class="reviewer">Marek Żebrowski, Polish Music Center Newsletter</div>
 					</li>
-					<li
-						style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
+					<li style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
 						<div>"Young pianist performed it brilliantly and you can see that she is a specialist in
 							contemporary music."</div>
 						<div class="reviewer">Vladimir Riha, "Hudebni Rozhledy"</div>
 					</li>
-					<li
-						style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
+					<li style="float: none; list-style: outside none none; position: absolute; width: 515px; z-index: 0; display: none;">
 						<div>"The solo part was excellently performed by Julia Samojlo, doctorate student
 							of Fryderyk Chopin University of Music in Warsaw. She greatly sensed
 							all nuances of this music."</div>
@@ -102,6 +94,28 @@
 					<p class="title">Upcoming</p>
 					<div class="event">
 						<div class="event-details">
+							<p class="event-time">November 4th, 2022, 7 pm</p>
+							<p class="event-title">Women in Music Festival, 2nd ed. Works by Grażyna Bacewicz, Fanny Hensel, Clara Schumann, Maria Szymanowska, Jadwiga Sarnecka, Marta Ptaszyńska, Hanna Kulenty</p>
+							<p class="event-venue">Gallery Nizio, Warsaw</p>
+							<p class="event-venue">
+                                                                Magdalena Molendowska (soprano), Freya Muller (mezzosoprano), Julia Samojło (piano), Grzegorz Mania/Piotr Różański (Zarębski Piano Duo)
+                                                        </p>
+							<p>
+								The concert is a part of a series “Composers’ portraits” organized by The Polish Composers’ Union under the honorary patronage of the Ambassador of the Federal Republic of Germany, Mr. Thomas Bagger.
+							</p>
+						</div>
+						<div class="event-details">
+							<p class="event-time">November 5th, 2022, 7 pm</p>
+							<p class="event-title">Women in Music Festival, 2nd ed. Works by Grażyna Bacewicz, Fanny Hensel, Clara Schumann, Maria Szymanowska, Jadwiga Sarnecka, Marta Ptaszyńska</p>
+							<p class="event-venue">Baltic Sea Cultural Center, Gdańsk</p>
+							<p class="event-venue">
+                                                                Magdalena Molendowska (soprano), Freya Muller (mezzosoprano), Julia Samojło (piano)
+                                                        </p>
+							<p>
+								The concert is a part of a series “Composers’ portraits” organized by The Polish Composers’ Union under the honorary patronage of the Consul general of the Federal Republic of Germany, Mrs. Cornelia Pieper.
+							</p>
+						</div>                                                
+						<div class="event-details">
 							<p class="event-time">December 7th, 2022, 6.30 pm</p>
 							<p class="event-title">Works by Artur Cieślak</p>
 							<p class="event-venue">PROM Kultury, Warsaw</p>
@@ -109,7 +123,7 @@
 							<p>
 								The concert is a part of a series “Composers’ portraits” organized by The Polish Composers’ Union.
 							</p>
-						</div>
+						</div>                                             
 					</div>
 
 					<p class="title">Recent</p>
