Added new events

--- a/calendar.html
+++ b/calendar.html
@@ -102,27 +102,28 @@
 					<p class="title">Upcoming</p>
 					<div class="event">
 						<div class="event-details">
-							<p class="event-time">November 4th, 2022, 7 pm</p>
-							<p class="event-title">Women in Music Festival, 2nd edition, Works by Grażyna Bacewicz, Fanny Hensel, Clara Schumann, Maria Szymanowska, Jadwiga Sarnecka, Marta Ptaszyńska, Hanna Kulenty</p>
-							<p class="event-venue">Gallery Nizio, Warsaw</p>
+							<p class="event-time">October 2nd, 2023, 7 pm</p>
+							<p class="event-title">vocal recital, works by Stanisław Moniuszko, Mieczysław Karłowicz, Karol Szymanowski, Tadeusz Baird</p>
+							<p class="event-venue">Dworek Hupki in Niwiska: Music School</p>
 							<p class="event-venue">
-								Magdalena Molendowska (soprano), Freya Muller (mezzosoprano), Julia Samojło (piano), Grzegorz Mania/Piotr Różański (Zarębski Piano Duo)
+								Łukasz Hajduczenia - baryton, Julia Samojło - fortepian
 							</p>
 							<p>
-								The concert is organized by The Polish Chamber Musicians' Association – Warsaw Branch under the honorary patronage of the Ambassador of the Federal Republic of Germany, Mr. Thomas Bagger.
-							</p>
-						</div>						
-						<div class="event-details">
-							<p class="event-time">November 5th, 2022, 7 pm</p>
-							<p class="event-title">Women in Music Festival, 2nd edition, Works by Grażyna Bacewicz, Fanny Hensel, Clara Schumann, Maria Szymanowska, Jadwiga Sarnecka, Marta Ptaszyńska</p>
-							<p class="event-venue">Baltic Sea Cultural Center, Gdańsk</p>
-							<p class="event-venue">
-								Magdalena Molendowska (soprano), Freya Muller (mezzosoprano), Julia Samojło (piano)
-							</p>
-							<p>
-								The concert is organized by The Polish Chamber Musicians' Association under the honorary patronage of the Consul general of the Federal Republic of Germany, Mrs. Cornelia Pieper.
+								The concert is organized by The Polish Chamber Musicians' Association<br>
+								www.spmk.com.pl 
 							</p>
 						</div>
+						<div class="event-details">
+							<p class="event-time">November 18th, 2023, 7 pm</p>
+							<p class="event-title">Szymon Laks Festival, works by Szymon Laks, Mieczyslaw Wajnberg, Grzegorz Fitelberg, Ignacy Friedman</p>
+							<p class="event-venue">Polin Museum, Warsaw</p>
+							<p class="event-venue">
+								Magdalena Molendowska (soprano), Julia Samojło (piano)
+							</p>
+							<p>
+								The concert is co-organized by the Warsaw branch of The Polish Chamber Musicians' Association and The Polin Museum 
+							</p>
+						</div>						
 					</div>
 
 					<p class="title">Recent</p>
@@ -140,31 +141,26 @@
 						</div>	
 						<div class="event-details">
 							<p class="event-time">November 5th, 2022, 7 pm</p>
-							<p class="event-title">Women in Music Festival, 2nd ed. Works by Grażyna Bacewicz, Fanny
-								Hensel, Clara Schumann, Maria Szymanowska, Jadwiga Sarnecka, Marta Ptaszyńska</p>
+							<p class="event-title">Women in Music Festival, 2nd edition, Works by Grażyna Bacewicz, Fanny Hensel, Clara Schumann, Maria Szymanowska, Jadwiga Sarnecka, Marta Ptaszyńska</p>
 							<p class="event-venue">Baltic Sea Cultural Center, Gdańsk</p>
 							<p class="event-venue">
 								Magdalena Molendowska (soprano), Freya Muller (mezzosoprano), Julia Samojło (piano)
 							</p>
 							<p>
-								The concert is a part of a series “Composers’ portraits” organized by The Polish Chamber Musicians' Association under the honorary patronage of the Consul general of the Federal
-								Republic of Germany, Mrs. Cornelia Pieper.
+								The concert is organized by The Polish Chamber Musicians' Association under the honorary patronage of the Consul general of the Federal Republic of Germany, Mrs. Cornelia Pieper.
 							</p>
 						</div>													
 						<div class="event-details">
 							<p class="event-time">November 4th, 2022, 7 pm</p>
-							<p class="event-title">Women in Music Festival, 2nd ed. Works by Grażyna Bacewicz, Fanny
-								Hensel, Clara Schumann, Maria Szymanowska, Jadwiga Sarnecka, Marta Ptaszyńska, Hanna
-								Kulenty</p>
+							<p class="event-title">Women in Music Festival, 2nd edition, Works by Grażyna Bacewicz, Fanny Hensel, Clara Schumann, Maria Szymanowska, Jadwiga Sarnecka, Marta Ptaszyńska, Hanna Kulenty</p>
 							<p class="event-venue">Gallery Nizio, Warsaw</p>
 							<p class="event-venue">
-								Magdalena Molendowska (soprano), Freya Muller (mezzosoprano), Julia Samojło (piano),
-								Grzegorz Mania/Piotr Różański (Zarębski Piano Duo)
+								Magdalena Molendowska (soprano), Freya Muller (mezzosoprano), Julia Samojło (piano), Grzegorz Mania/Piotr Różański (Zarębski Piano Duo)
 							</p>
 							<p>
-								The concert is a part of a series “Composers’ portraits” organized by Polish Chamber Musicians' Association under the honorary patronage of the Ambassador of the Federal Republic of Germany, Mr. Thomas Bagger.
+								The concert is organized by The Polish Chamber Musicians' Association – Warsaw Branch under the honorary patronage of the Ambassador of the Federal Republic of Germany, Mr. Thomas Bagger.
 							</p>
-						</div>				
+						</div>			
 						<div class="event-details">
 							<p class="event-time">December 13th, 2021, 7 pm</p>
 							<p class="event-title">Vocal recital - works by Szymon Laks, Mieczysław Weinberg, Ignaz
