--- a/calendar.html
+++ b/calendar.html
@@ -109,7 +109,7 @@
 								Łukasz Hajduczenia - baryton, Julia Samojło - fortepian
 							</p>
 							<p>
-								The concert is organized by <a href="www.spmk.com.pl" target="_blank">The Polish Chamber Musicians' Association</a>
+								The concert is organized by <a href="https://spmk.com.pl/" target="_blank">The Polish Chamber Musicians' Association</a>
 							</p>
 						</div>
 						<div class="event-details">
